# models/problem_basic.go
@@ -10,8 +10,9 @@ type ProblemBasic struct {
 	ProblemCategories []*ProblemCategory `gorm:"foreignKey:problem_id;references:id"`                 //关联问题分类
 	Title             string             `gorm:"column:title;type:varchar(255);" json:"title"`        //文章标题
 	Content           string             `gorm:"column:content;type:text;" json:"content"`            //文章正文
-	MaxMem            string             `gorm:"column:max_mem;type:int(11);" json:"max_mem"`         //最大运行内存
-	MaxRuntime        string             `gorm:"column:max_runtime;type:int(11);" json:"max_runtime"` //最大运行时间
+	MaxMem            int                `gorm:"column:max_mem;type:int(11);" json:"max_mem"`         //最大运行内存
+	MaxRuntime        int                `gorm:"column:max_runtime;type:int(11);" json:"max_runtime"` //最大运行时间
+	TestCases         []*TestCase        `gorm:"foreignKey:problem_identity;references:identity"`     //关联测试用例表
 }
 
 func (table *ProblemBasic) TableName() string {
